[tool.poetry]
name = "snurt"
version = "0.1.0"
description = ""
authors = ["_.fmendes._ <fmendes_dev@protonmail.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sanic = "^23.12.1"
setuptools = "^70.0.0"
prisma = "^0.13.1"
asyncio = "^3.4.3"
pyjwt = "^2.8.0"
python-decouple = "^3.8"
bcrypt = "^4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
